src/components/text-editor/prosemirror-adapter/partial-styles/_prosemirror-menu.scss
@use '../../../../style/mixins';

$size-of-caret: 0.25rem;

div#editor {
    .ProseMirror-menubar {
        position: sticky !important;
        z-index: 1;
        top: 0;

        &[style*='position: fixed'] {
            // They add this dynamically as soon as you scroll.
            // I want to catch this to detect the scroll,
            // to add proper styles. This is a hack.
            box-shadow: 0 0.25rem 0.5rem -0.5rem rgb(var(--color-black), 0.8);
        }
    }
}

.ProseMirror-menubar {
    position: relative;
    z-index: 1;
    display: flex;
    flex-wrap: wrap;
    gap: 0.25rem;
    align-items: center;

    padding: 0.125rem;
    background-color: rgb(var(--contrast-100));
    border-top-left-radius: 0.5rem;
    border-top-right-radius: 0.5rem;
}

.ProseMirror-menuitem {
    &:not(:has(.ProseMirror-menu-disabled)) {
        @include mixins.is-flat-clickable;
    }
    position: relative;
    flex-shrink: 0;
    display: flex;
    align-items: center;
    justify-content: center;

    white-space: nowrap;
    line-height: 1;

    height: 1.5rem;
    min-width: 1.5rem;
    border-radius: 0.25rem;
    color: rgb(var(--contrast-1100));
    font-size: 0.8125rem;

    &:has(.ProseMirror-menu-active) {
        box-shadow: var(--button-shadow-inset);
        color: var(--mdc-theme-primary);

        svg {
            color: var(--mdc-theme-primary);
        }
    }

    &:has(.ProseMirror-menu-dropdown-menu) {
        box-shadow: var(--button-shadow-inset);
    }

    svg {
        fill: currentColor;
        height: 1rem;
        color: rgb(var(--contrast-1100));
    }
}

.ProseMirror-menuseparator {
    border-radius: 1rem;
    background-color: rgb(var(--contrast-600));
    width: 0.125rem;
    height: 1rem;
}

.ProseMirror-menu-dropdown {
    position: relative;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    padding: 0 0.5rem;

    &:after {
        content: '';
        border-left: $size-of-caret solid transparent;
        border-right: $size-of-caret solid transparent;
        border-top: $size-of-caret solid currentColor;
    }
}

.ProseMirror-menu-dropdown-menu,
.ProseMirror-menu-submenu {
    //the same shadow as limel-menu
    box-shadow:
        0px 5px 5px -3px rgba(0, 0, 0, 0.2),
        0px 8px 10px 1px rgba(0, 0, 0, 0.14),
        0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.ProseMirror-menu-dropdown-menu {
    position: absolute;
    top: 100%;
    background: rgb(var(--contrast-100));
    border-radius: 0.25rem;
    padding: 0.125rem;
}

.ProseMirror-menu-submenu {
    position: absolute;
    background: rgb(var(--contrast-100));
    border-radius: 0.25rem;
    padding: 0.125rem;
    display: none;
    min-width: 4em;
    left: 100%;
    top: -0.75rem;
}

.ProseMirror-menu-dropdown-item {
    transition: background-color 0.2s ease;
    cursor: pointer;
    border-radius: 0.375rem;

    min-height: 2.5rem;
    display: flex;
    align-items: center;
    width: 100%;

    > div {
        padding: 0 1rem;
        width: 100%;
    }

    &:not(:has(.ProseMirror-menu-disabled)) {
        &:hover {
            background-color: rgb(var(--contrast-300));
        }
    }
}

.ProseMirror-menu-submenu-wrap {
    position: relative;
    margin-right: -0.25rem;

    &:hover {
        .ProseMirror-menu-submenu {
            display: block;
        }
    }
}

.ProseMirror-menu-submenu-label {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.5rem;

    &:after {
        content: '';
        border-top: $size-of-caret solid transparent;
        border-bottom: $size-of-caret solid transparent;
        border-left: $size-of-caret solid currentColor;
    }
}

.ProseMirror-menu-disabled {
    opacity: 0.3;
    cursor: default;
}

.ProseMirror-menu-submenu-wrap-active {
    .ProseMirror-menu-submenu {
        display: block;
    }
}

